--- a/MathFun1000/Site.Master
+++ b/MathFun1000/Site.Master
@@ -64,7 +64,7 @@
                 <nav>
                     <ul id="menu">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/MathProgram">Math Program</a></li>
+                        <li><a runat="server" href="~/Chapters">Chapters</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                     </ul>
                 </nav>
@@ -80,7 +80,7 @@
     <footer>
         <div class="content-wrapper">
             <div class="float-left">
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - MathFun1000</p>
             </div>
         </div>
     </footer>
