--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -23,6 +23,22 @@ a {
     text-decoration: underline;
 }
 
+p
+{
+    display:inline-block;
+}
+
+.answerBox
+{
+    width:25px;
+    height: 15px;
+    vertical-align:bottom;
+    font-size:12px;
+    outline:solid;
+    outline-color:black;
+    outline-width:1px;
+}
+
     a:link, a:visited,
     a:active, a:hover {
         color: #333;
