Added Unguided Functionality
There is now an unguided option to only put in the answer. It also
removes all white space to make sure that a single space won't mess up
the answer.

--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -39,6 +39,17 @@ p
     outline-width:1px;
 }
 
+.unguidedBox
+{
+    width:175px;
+    height: 15px;
+    vertical-align:bottom;
+    font-size:12px;
+    outline:solid;
+    outline-color:black;
+    outline-width:1px;
+}
+
     a:link, a:visited,
     a:active, a:hover {
         color: #333;
