--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -1,18 +1,70 @@
 ﻿html {
-    background-color: #e2e2e2;
+    background-color: #333;
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #fff;
+    background-color: #333;
     border-top: solid 10px #000;
-    color: #333;
+    color: #000;
     font-size: .85em;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
     margin: 0;
     padding: 0;
     
+}
+
+.box
+{
+    display:inline-block;
+    width: 250px;
+    min-height: 50px;
+    font-size: 15px;
+    padding: 10px 10px 10px 10px;
+    margin:  5px 5px 5px 5px;
+    border: 2px solid #000;
+    vertical-align: bottom;
+    background-color: #aaa;
+}
+
+.MainContainer
+{
+    margin: 10px 10px 10px 10px;
+    border: 2px solid #444;
+    display:inline-block;
+}
+
+.StepContainer
+{
+    display:inline-block;
+    margin: 10px 10px 10px 10px;
+    border: 2px solid #555;
+    
+}
+
+.button
+{
+    width:25px;
+    height: 40px;
+    font-size:5px;
+    padding: 0px 0px 0px 0px;    
+}
+
+.StepForwardButton
+{
+    float:right;
+}
+
+.answerBox
+{
+    width:25px;
+    height: 15px;
+    vertical-align:bottom;
+    font-size:12px;
+    outline:solid;
+    outline-color:black;
+    outline-width:1px;
 }
 
 a {
@@ -52,11 +104,11 @@ p
 
     a:link, a:visited,
     a:active, a:hover {
-        color: #333;
+        color: #000;
     }
 
     a:hover {
-        background-color: #c7d1d6;
+        background-color: #ccc;
     }
 
 header, footer, hgroup,
@@ -64,31 +116,9 @@ nav, section {
     display: block;
 }
 
-mark {
-    background-color: #a6dbed;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-.float-left {
-    float: left;
-}
-
-.float-right {
-    float: right;
-}
-
-.clear-fix:after {
-    content: ".";
-    clear: both;
-    display: block;
-    height: 0;
-    visibility: hidden;
-}
-
 h1, h2, h3,
 h4, h5, h6 {
-    color: #000;
+    color: #ccc;
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -126,19 +156,14 @@ h5, h6 {
 }
 
 #body {
-    background-color: #efeeef;
+    background-color: #222;
     clear: both;
     padding-bottom: 35px;
 }
 
     .main-content {
-        background: url("../Images/accent.png") no-repeat;
         padding-left: 10px;
         padding-top: 30px;
-    }
-
-    .featured + .main-content {
-        background: url("../Images/heroAccent.png") no-repeat;
     }
 
 header .content-wrapper {
@@ -147,7 +172,7 @@ header .content-wrapper {
     
 footer {
     clear: both;
-    background-color: #e2e2e2;
+    background-color: #222;
     font-size: .8em;
     height: 100px;
 }
@@ -180,7 +205,7 @@ footer {
 }
 
     #login a {
-        background-color: #d3dce0;
+        background-color: #58ACFA;
         margin-left: 10px;
         margin-right: 3px;
         padding: 2px 3px;
@@ -226,7 +251,7 @@ ul#menu {
         }
 
         ul#menu li a:hover {
-            color: #333;
+            color: #777;
             text-decoration: none;
         }
 
@@ -235,22 +260,18 @@ ul#menu {
 ----------------------------------------------------------*/
 /* featured */
 .featured {
-    background-color: #fff;
+    background-color: #222;
 }
 
     .featured .content-wrapper {
-        background-color: #7ac0da;
-        background-image: -ms-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -o-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #7ac0da), color-stop(1, #a4d4e6));
-        background-image: -webkit-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        color: #3e5667;
+        background-color: #aaa;
+        
+        color: #111;
         padding: 20px 40px 30px 40px;
     }
 
         .featured hgroup.title h1, .featured hgroup.title h2 {
-            color: #fff;
+            color: #ddd;
         }
 
         .featured p {
@@ -331,13 +352,11 @@ ol.round {
 
 /* content */
 article {
-    float: left;
-    width: 70%;
+    
 }
 
 aside {
-    float: right;
-    width: 25%;
+    
 }
 
     aside ul {
@@ -394,7 +413,7 @@ fieldset.open-auth-providers {
 }
 
 .contact iframe {
-    border: 1px solid #333;
+    border: 1px solid #999;
     margin: 5px 0 0 10px;
 }
 
@@ -429,9 +448,9 @@ fieldset {
     }
 
     input, textarea {
-        border: 1px solid #e2e2e2;
-        background: #fff;
-        color: #333;
+        border: 1px solid #aaa;
+        background: #ccc;
+        color: #222;
         font-size: 1.2em;
         margin: 5px 0 6px 0;
         padding: 5px;
@@ -444,7 +463,7 @@ fieldset {
     }
     
         input:focus, textarea:focus {
-            border: 1px solid #7ac0da;
+            border: 1px solid #fff;
         }
 
         input[type="checkbox"] {
@@ -456,8 +475,8 @@ fieldset {
     input[type="submit"],
     input[type="button"],
     button {
-        background-color: #d3dce0;
-        border: 1px solid #787878;
+        background-color: #58ACFA;
+        border: 2px solid #898989;
         cursor: pointer;
         font-size: 1.2em;
         font-weight: 600;
