--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -25,7 +25,7 @@ body {
     margin:  5px 5px 5px 5px;
     border: 2px solid #000;
     vertical-align: bottom;
-    background-color: #aaa;
+    background-color: #C5CEFF;
 }
 
 .MainContainer
@@ -205,15 +205,19 @@ footer {
 }
 
     #login a {
-        background-color: #58ACFA;
+        background-color: #68709F;
         margin-left: 10px;
         margin-right: 3px;
         padding: 2px 3px;
         text-decoration: none;
     }
 
+    #login a:hover {
+            color: #58ACFA;
+        }
+
     #login a.username {
-        background: none;
+        background: #58ACFA;
         margin-left: 0px;
         text-decoration: underline;
     }
@@ -251,7 +255,7 @@ ul#menu {
         }
 
         ul#menu li a:hover {
-            color: #777;
+            color: #58ACFA;
             text-decoration: none;
         }
 
@@ -264,14 +268,13 @@ ul#menu {
 }
 
     .featured .content-wrapper {
-        background-color: #aaa;
-        
-        color: #111;
+        background-color: #68709F;
+        color: #c8c8c8;
         padding: 20px 40px 30px 40px;
     }
 
         .featured hgroup.title h1, .featured hgroup.title h2 {
-            color: #ddd;
+            color: #c8c8c8;
         }
 
         .featured p {
@@ -475,14 +478,19 @@ fieldset {
     input[type="submit"],
     input[type="button"],
     button {
-        background-color: #58ACFA;
-        border: 2px solid #898989;
+        background-color: #68709F;
+        border: 2px solid #0000;
         cursor: pointer;
         font-size: 1.2em;
         font-weight: 600;
+        color: #0000;
         padding: 7px;
         margin-right: 8px;
         width: auto;
+    }
+
+    input[type="submit"]:hover {
+        color: #58ACFA ;
     }
 
     td input[type="submit"],
