Fixed bug caused by a bad merge
sorry

--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -77,7 +77,7 @@ a {
 
 p
 {
-    color: #c8c8c8;
+    color: black;
     display:inline-block;
 }
 
@@ -379,6 +379,7 @@ aside {
 
 /* login page */
 #loginForm {
+    color: #c8c8c8;
     border-right: solid 2px #c8c8c8;
     float: left;
     width: 55%;
