--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -15,6 +15,22 @@ body {
     
 }
 
+.row
+{
+    background-color: #c8c8c8;
+    text-align: right;
+    font-size: 10px;
+    display: block;
+    font-weight: normal;
+    margin: 1px;
+    cursor: pointer;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px;
+    height: 15px;
+    width: 840px;
+    
+}
+
 .box
 {
     display:inline-block;
@@ -26,6 +42,7 @@ body {
     border: 2px solid #000;
     vertical-align: bottom;
     background-color: #C5CEFF;
+    height: auto;
 }
 
 .MainContainer
