--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -239,7 +239,7 @@ footer {
     }
 
     #login a:hover {
-            color: #fff2e7;
+            color: #D0cabf;
         }
 
     #login a.username {
