--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -45,7 +45,7 @@ body {
 
 .MainContainer
 {
-    margin: 10px 10px 10px 10px;
+    margin: 0px 10px 10px 10px;
     border: 2px solid #444;
     display:inline-block;
 }
@@ -588,10 +588,14 @@ input[type="checkbox"].input-validation-error {
 /* tables
 ----------------------------------------------------------*/
 table {
+    border-style: none;
+    border-color: inherit;
+    border-width: 0;
     border-collapse: collapse;
     border-spacing: 0;
-    margin-top: 0.75em;
-    border: 0 none;
+    margin-top: 4.4em;
+    margin-left: 29px;
+    margin-right: 134px;
 }
 
 th {
