--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -600,10 +600,9 @@ fieldset {
         background: #ccc;
         color: #222;
         font-size: 1.2em;
-        margin: 5px 0 6px 0;
+        margin: 5px 46px 6px 40px;
         padding: 5px;
-        width: 300px;
-    }
+        }
 
     textarea {
         font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "Apple Gothic", sans-serif;
@@ -709,9 +708,10 @@ table {
     border-width: 0;
     border-collapse: collapse;
     border-spacing: 0;
-    margin-top: 4.4em;
-    margin-left: 29px;
-    margin-right: 134px;
+    margin-top: 7em;
+    margin-left: 49px;
+    margin-right: 32px;
+    margin-bottom: 19px;
 }
 
 th {
