--- a/MathFun1000/Site.Master
+++ b/MathFun1000/Site.Master
@@ -66,7 +66,7 @@
                 <nav>
                     <ul id="menu">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/Chapters">Chapters</a></li>
+                        <li><a runat="server" href="~/Books">Books</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                     </ul>
                 </nav>
