--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -138,18 +138,22 @@ body {
     
 }
 
+.StepForwardButton
+{
+    display: inline-block;
+    float:right;
+}
+
 .button
 {
     width:25px;
     height: 40px;
     font-size:5px;
-    padding: 0px 0px 0px 0px;    
+    
+    //padding: 0px 0px 0px 0px;    
 }
 
-.StepForwardButton
-{
-    float:right;
-}
+
 
 .answerBox
 {
@@ -600,7 +604,7 @@ fieldset {
         background: #ccc;
         color: #222;
         font-size: 1.2em;
-        margin: 5px 46px 6px 40px;
+        margin: 5px 5px 6px 5px;
         padding: 5px;
         }
 
