--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -100,6 +100,13 @@ body {
     vertical-align: middle;
 }
 
+.ruleDescBox
+{
+    background-color: #c8c8c8;
+    padding: 20px 20px 20px 20px;
+    border-width: 3px;
+}
+
 .boxQuestion
 {
     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "Apple Gothic", sans-serif;
