Have basic content display up. Asynchonous data loading of books, chapters, problems, and steps. Steps can be edited locally.

--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -33,6 +33,14 @@ body {
     color: white;
 }
 
+.controlBox
+{
+    display: block;
+    height: 50px;
+    background-color: #000;
+
+}
+
 .examplebox 
 {
     display:inline-block;
