--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -193,6 +193,17 @@ body {
     //padding: 0px 0px 0px 0px;    
 }
 
+.editBox
+{
+    //min-height: 50px;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    background-color: #999;
+
+}
+
 .menuContainer
 {
     width: 60%;
