--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -38,7 +38,10 @@ body {
     display: block;
     height: 50px;
     background-color: #000;
-
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .examplebox 
