--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -36,7 +36,7 @@ body {
 .controlBox
 {
     display: block;
-    height: 50px;
+    height: 100px;
     background-color: #000;
     padding-left: 10px;
     padding-right: 10px;
@@ -189,7 +189,7 @@ body {
 
 .button
 {
-    width:25px;
+    //width:25px;
     //height: 40px;
     font-size:5px;
     
