--- a/MathFun1000/Site.Master
+++ b/MathFun1000/Site.Master
@@ -58,7 +58,7 @@
                                     <asp:LoginName runat="server" CssClass="username" /></a>!
                                 <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" />
                                 <br/><br/>
-                                <a runat="server" class="username" href="~/DisplayProblems" title="Add a Step">View Problems</a>
+                                <%--<a runat="server" class="username" href="~/DisplayProblems" title="Add a Step">View Problems</a>--%>
                             </p>
                         </LoggedInTemplate>
                     </asp:LoginView>
