--- a/MathFun1000/Site.Master
+++ b/MathFun1000/Site.Master
@@ -54,11 +54,11 @@
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <p>
-                                Hello, <a runat="server" class="username" href="~/Account/Manage" title="Manage your account">
+                                Hello, <a runat="server" class="username" href="~/Account/UserManagement.aspx" title="Manage your account">
                                     <asp:LoginName runat="server" CssClass="username" /></a>!
                                 <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" />
-                                <br/><br/>
-                                <a runat="server" class="username" href="~/DisplayProblems" title="Add a Step">View Problems</a>
+                                <%--<br/><br/>--%>
+                                <%--<a runat="server" class="username" href="~/DisplayProblems" title="Add a Step">View Problems</a>--%>
                             </p>
                         </LoggedInTemplate>
                     </asp:LoginView>
