--- a/MathFun1000/SiteLoggedIn.Master
+++ b/MathFun1000/SiteLoggedIn.Master
@@ -55,10 +55,10 @@
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <p>
-                                Hello, <a runat="server" class="username" href="~/Account/Manage" title="Manage your account">
+                                Hello, <a runat="server" class="username" href="~/Account/UserManagement.aspx" title="Manage your account">
                                     <asp:LoginName runat="server" CssClass="username" /></a>!
                                 <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" />
-                                <br/><br/>
+                                <%--<br/><br/>--%>
                             </p>
                         </LoggedInTemplate>
                     </asp:LoginView>
