--- a/MathFun1000/Site.Master
+++ b/MathFun1000/Site.Master
@@ -54,9 +54,9 @@
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <p>
-                                Hello, <a runat="server" class="username" href="~/Account/UserManagement.aspx" title="Manage your account">
-                                    <asp:LoginName runat="server" CssClass="username" /></a>!
-                                <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" />
+                                <a runat="server" class="username" href="~/Account/UserManagement.aspx" title="Manage your account">
+                                    <asp:LoginName runat="server" CssClass="username" /></a>
+                                <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/logout.aspx" />
                                 <%--<br/><br/>--%>
                                 <%--<a runat="server" class="username" href="~/DisplayProblems" title="Add a Step">View Problems</a>--%>
                             </p>
@@ -64,10 +64,11 @@
                     </asp:LoginView>
                 </section>
                 <nav>
-                    <ul id="menu">
+                    <ul id="menu" runat="server">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/Books">Books</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
+                        <li><a id="xx" runat="server" href="~/">Manage</a></li>
                     </ul>
                 </nav>
             </div>
