--- a/MathFun1000/SiteLoggedIn.Master
+++ b/MathFun1000/SiteLoggedIn.Master
@@ -55,8 +55,8 @@
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <p>
-                                Hello, <a runat="server" class="username" href="~/Account/UserManagement.aspx" title="Manage your account">
-                                    <asp:LoginName runat="server" CssClass="username" /></a>!
+                                </span> <a runat="server" class="username" href="~/Account/UserManagement.aspx" title="Manage your account">
+                                    <asp:LoginName runat="server" CssClass="username" /></a>
                                 <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" />
                                 <%--<br/><br/>--%>
                             </p>
@@ -68,6 +68,7 @@
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/Books">Books</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
+                        <li><a id="xx" runat="server" href="~/">Manage</a></li>
                     </ul>
                 </nav>
             </div>
