--- a/MathFun1000/Site.Master
+++ b/MathFun1000/Site.Master
@@ -68,7 +68,7 @@
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/Books">Books</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
-                        <li><a id="xx" runat="server" href="~/">Manage</a></li>
+                        <li><a id="xx" runat="server" href="~/AddContent">Manage</a></li>
                     </ul>
                 </nav>
             </div>
