HotFix for certifications on login

--- a/MathFun1000/Content/Site.css
+++ b/MathFun1000/Content/Site.css
@@ -191,7 +191,7 @@ body {
 {
     //width:25px;
     //height: 40px;
-    font-size:5px;
+    //font-size:5px;
     
     //padding: 0px 0px 0px 0px;    
 }
